[#65] Implemented user option to hide the scramble preview behind a button, for users who like to avoid spoilers.

--- a/app/static/less/timer/common.less
+++ b/app/static/less/timer/common.less
@@ -131,6 +131,13 @@
     }
 }
 
+.scramble_preview {
+    cursor: pointer;
+    &.no_pointer {
+        cursor: default;
+    }
+}
+
 .mods_area {
     height: 40%;
     width: 100%;
