--- a/app/static/less/timer/desktop.less
+++ b/app/static/less/timer/desktop.less
@@ -70,7 +70,6 @@
 
 .scramble_preview {
     height: 50%;
-    cursor: pointer;
 }
 
 .single_time {
