--- a/app/static/less/timer/mobile.less
+++ b/app/static/less/timer/mobile.less
@@ -25,6 +25,13 @@
         width: 50%;
         padding: 5px;
         float: right;
+
+        &.no_pointer {
+            .btn_scramble_preview {
+                color: white;
+                border-color: white;
+            }
+        }
     }
 }
 
